Properly handle generics